# DATA512

./: README.md
data-512-Final-Project/: .gitignore  README.md
data-512-Final-Project/src/notebooks/: data_analysis.ipynb
data-512-common-analysis/: .gitignore  README.md
data-512-common-analysis/src/libs/: api_call_AQI.py  api_key_store.py  helpers.py  load_and_filter_json.py
data-512-common-analysis/src/notebooks/: data_analysis.ipynb  data_loading.ipynb
data-512-final-project/: README.md
data-512-homework_1/: LICENSE  README.md  data_collection_api_call.ipynb  pyproject.toml
data-512-homework_1/data/schemas/: json-schema-rare-disease_monthly_cumulative_2015070100-2024093000.json
data-512-homework_1/libs/: api_request.py  run_api_calls.sh
data-512-homework_1/libs/notebooks/: api_request_documentation.ipynb  combine_api_results_documentation.ipynb  data_analysis.ipynb
data-512-homework_1/libs/src/: api_request.py  combine_api_results.py  run_scripts.sh
data-512-homework_2/: README.md  pyproject.toml
data-512-homework_2/data/final/: wp_countries-no_match.txt  wp_politicians_by_country.csv
data-512-homework_2/src/libs/: api_key_store.py  ores_api_request.py  page_info_api_request.py  run_scripts.sh
data-512-homework_2/src/notebooks/: data_analysis.ipynb  data_collection_api_call_liftwing_documentation.ipynb  data_collection_api_call_pageinfo_documentation.ipynb  data_wrangling_merge_csvs.ipynb  data_wrangling_population_by_country.ipynb  wp_ores_liftwing_example.ipynb  wp_page_info_example.ipynb
(+10 files in other folders)
