[tool.poetry]
name = "homework-1"
version = "0.1.0"
description = "Packages required for homework 1 of DATA 512 Autumn Quarter 2024"
authors = ["SSGurajala <sgura99@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pandas = "^2.2.3"
plotly = "^5.24.1"
kaleido = "0.2.1"
nbformat = "^5.10.4"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
