[tool.poetry]
name = "data-512-homework-2"
version = "0.1.0"
description = "Packages required for data-512-homework_2"
authors = ["SSGurajala <sgura99@uw.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
